Исправления базовой стилизации

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="navigation-list ">
           <li class="navigation-item">
             <button type="button">
-              <img src="images/searchicon.svg" alt="Иконка поиска" width="18" height="18">
+              <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
               <span class="visually-hidden">Поиск</span>
             </button>
           </li>
@@ -167,7 +167,7 @@
         <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
       </div>
       <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademylogo.svg"
+        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademy.svg"
             alt="Логотип создателей сайта" width="115" height="33"></a>
       </div>
     </footer>
