--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
         <ul class="navigation-list ">
           <li class="navigation-item">
             <button type="button">
-              <img src="images/searchicon.svg" alt="Иконка поиска" width="18" height="18">
+              <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
               <span class="visually-hidden">Поиск</span>
             </button>
           </li>
@@ -122,7 +122,7 @@
         <ul class="hotels-list">
           <li class="hotel-list-item">
             <a class="hotel-link" href="#">
-              <img class="hotel-img" src="images/catalogimages/amara.jpg" alt="Вид на ночное небо со дна каньона"
+              <img class="hotel-img" src="images/catalog/amara.jpg" alt="Вид на ночное небо со дна каньона"
                 width="300" height="212">
             </a>
             <h4 class="hotel-name">Amara Resort & Spa</h4>
@@ -139,7 +139,7 @@
           </li>
           <li class="hotel-list-item">
             <a class="hotel-link" href="#">
-              <img class="hotel-img" src="images/catalogimages/villas.jpg" alt="Горный хребет на фоне неба и радуги"
+              <img class="hotel-img" src="images/catalog/villas.jpg" alt="Горный хребет на фоне неба и радуги"
                 width="300" height="212">
             </a>
             <h4 class="hotel-name">Villas at Poco Diablo</h4>
@@ -156,7 +156,7 @@
           </li>
           <li class="hotel-list-item">
             <a class="hotel-link" href="#">
-              <img class="hotel-img" src="images/catalogimages/desert.jpg" alt="Гора в окружении зеленой растительности"
+              <img class="hotel-img" src="images/catalog/desert.jpg" alt="Гора в окружении зеленой растительности"
                 width="300" height="212">
             </a>
             <h4 class="hotel-name">Desert Quail Inn</h4>
@@ -173,7 +173,7 @@
           </li>
           <li class="hotel-list-item">
             <a class="hotel-link" href="#">
-              <img class="hotel-img" src="images/catalogimages/greentree.jpg" alt="Одинокая гора на фоне звездного неба"
+              <img class="hotel-img" src="images/catalog/greentree.jpg" alt="Одинокая гора на фоне звездного неба"
                 width="300" height="212">
             </a>
             <h4 class="hotel-name">GreenTree Inn</h4>
@@ -255,7 +255,7 @@
           <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
         </div>
         <div class="devlogo-container">
-          <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademylogo.svg"
+          <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademy.svg"
               alt="Логотип создателей сайта" width="115" height="33">
           </a>
         </div>
