--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Header -->
 
+   <div class="body-container">
     <header class="main-header">
       <nav class="navigation">
         <a class="navigation-logo">
@@ -41,7 +42,7 @@
             </button>
           </li>
           <li class="navigation-item">
-            <button type="button" class="wish-button">Хочу Сюда
+            <button type="button" class="button wish-button">Хочу Сюда
               <span class="visually-hidden">Подать заявку</span>
             </button>
           </li>
@@ -71,6 +72,8 @@
               <h3 class="advantage-item-header near-picture">Настоящий городок</h3>
               <p class="advantage-item-description near-picture">Седона — не аттракцион для туристов, там течёт своя
                 жизнь</p>
+            </li>
+            <li class="advantage-photo">
               <img src="images/features/photo1.jpg" alt="Пейзаж города Седоны" width="800" height="385">
             </li>
             <li class="advantage-item corner-block">
@@ -85,11 +88,13 @@
               <h3 class="advantage-item-header">Мало туристов</h3>
               <p class="advantage-item-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
+            <li>
+              <img src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека" width="800" height="385">
+            </li>
             <li class="advantage-item near-picture">
               <h3 class="advantage-item-header near-picture">Там есть мост дьявола</h3>
               <p class="advantage-item-description near-picture">Да, по нему можно пройти! Если вы осмелитесь,
                 разумеется</p>
-              <img src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека" width="800" height="385">
             </li>
           </ul>
         </div>
@@ -123,19 +128,19 @@
 
       <section class="hotel-search">
         <h2 class="hotel-search-header"> Заинтересовались</h2>
-        <p class="hotel-search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+        <p class="hotel-search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
           гостиниц в Седоне</p>
-        <a class="search-btn" href="catalog.html">Поиск гостиницы в Седоне</a>
+        <button class="button search-btn" href="catalog.html">Поиск гостиницы в Седоне</button>
       </section>
 
       <!-- Subscribe -->
 
-      <div class="subsc-index">
+      <div class="subscribe subsc-index">
         <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
         <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post">
           <input type="text" name="email" placeholder="Ваш e-mail">
-          <button class="subsc-button" type="submit">Подписаться</button>
+          <button class="button subsc-button" type="submit">Подписаться</button>
         </form>
       </div>
     </main>
@@ -143,6 +148,7 @@
     <!-- Footer -->
 
     <footer class="main-footer">
+      <div class="footer-container">
       <ul class="social">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
@@ -171,6 +177,7 @@
             alt="Логотип создателей сайта" width="115" height="33"></a>
       </div>
     </footer>
+   </div>
   </body>
 
 </html>
