Добавлен stickyfooter/исправлены ошибки по валидатору

--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main-inner">
+    <main class="main">
 
       <!-- Filter -->
 
@@ -88,8 +88,8 @@
             <label class="filter-item price-value"><input type="text" placeholder="от" value="0"></label>
             <label class="filter-item price-value"><input type="text" placeholder="до" value="9000"></label>
           </fieldset>
-          <button type="button submit" class="button submit-button">Применить</button>
-          <button type="button reset" class="button reset-button">Сбросить</button>
+          <button type="button" class="button submit-button">Применить</button>
+          <button type="button" class="button reset-button">Сбросить</button>
         </form>
       </section>
 
