--- a/index.html
+++ b/index.html
@@ -11,173 +11,175 @@
 
     <!-- Header -->
 
-   <div class="body-container">
-    <header class="main-header">
-      <nav class="navigation">
-        <a class="navigation-logo">
-          <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140" height="70">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list ">
-          <li class="navigation-item">
-            <button type="button">
-              <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
-              <span class="visually-hidden">Поиск</span>
-            </button>
-          </li>
-          <li class="navigation-item">
-            <button type="button">
-              <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17">
-              <span class="visually-hidden">Добавить в избранное</span>
-            </button>
-          </li>
-          <li class="navigation-item">
-            <button type="button" class="button wish-button">Хочу Сюда
-              <span class="visually-hidden">Подать заявку</span>
-            </button>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main">
-
-      <!-- Hero -->
-
-      <section class="hero">
-        <div class="hero-container">
-          <img class="background-img" src="images/welcometext.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону"
-            width="458" height="352">
-        </div>
-        <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
-        <p class="hero-text"> Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      </section>
-
-      <!-- Advantages -->
-
-      <section class="sedona-advantages">
-        <div class="advantages-container">
-          <h2 class="advantages-header"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
-          <ul class="advantages-list">
-            <li class="advantage-item near-picture">
-              <h3 class="advantage-item-header near-picture">Настоящий городок</h3>
-              <p class="advantage-item-description near-picture">Седона — не аттракцион для туристов, там течёт своя
-                жизнь</p>
+    <div class="body-container">
+      <header class="main-header">
+        <nav class="navigation">
+          <a class="navigation-logo">
+            <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140" height="70">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Главная</a>
             </li>
-            <li class="advantage-photo">
-              <img src="images/features/photo1.jpg" alt="Пейзаж города Седоны" width="800" height="385">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
             </li>
-            <li class="advantage-item corner-block">
-              <h3 class="advantage-item-header">Небольшая площадь</h3>
-              <p class="advantage-item-description">Все достопримечательности находятся очень близко</p>
-            </li>
-            <li class="advantage-item middle-block">
-              <h3 class="advantage-item-header">Красивая дорога</h3>
-              <p class="advantage-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantage-item corner-block">
-              <h3 class="advantage-item-header">Мало туристов</h3>
-              <p class="advantage-item-description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-            <li>
-              <img src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека" width="800" height="385">
-            </li>
-            <li class="advantage-item near-picture">
-              <h3 class="advantage-item-header near-picture">Там есть мост дьявола</h3>
-              <p class="advantage-item-description near-picture">Да, по нему можно пройти! Если вы осмелитесь,
-                разумеется</p>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Гостиницы</a>
             </li>
           </ul>
+          <ul class="navigation-list ">
+            <li class="navigation-item">
+              <button type="button">
+                <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
+                <span class="visually-hidden">Поиск</span>
+              </button>
+            </li>
+            <li class="navigation-item">
+              <button type="button">
+                <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17">
+                <span class="visually-hidden">Добавить в избранное</span>
+              </button>
+            </li>
+            <li class="navigation-item">
+              <button type="button" class="button wish-button">Хочу Сюда
+                <span class="visually-hidden">Подать заявку</span>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+
+        <!-- Hero -->
+
+        <section class="hero">
+          <div class="hero-container">
+            <img class="background-img" src="images/welcometext.svg"
+              alt="Надоел Гранд каньон - Добро пожаловать в Седону" width="458" height="352">
+          </div>
+          <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
+          <p class="hero-text"> Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        </section>
+
+        <!-- Advantages -->
+
+        <section class="sedona-advantages">
+          <div class="advantages-container">
+            <h2 class="advantages-header"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
+            <ul class="advantages-list">
+              <li class="advantage-item near-picture">
+                <h3 class="advantage-item-header near-picture">Настоящий городок</h3>
+                <p class="advantage-item-description near-picture">Седона — не аттракцион для туристов, там течёт своя
+                  жизнь</p>
+              </li>
+              <li class="advantage-photo">
+                <img src="images/features/photo1.jpg" alt="Пейзаж города Седоны" width="800" height="385">
+              </li>
+              <li class="advantage-item corner-block">
+                <h3 class="advantage-item-header">Небольшая площадь</h3>
+                <p class="advantage-item-description">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="advantage-item middle-block">
+                <h3 class="advantage-item-header">Красивая дорога</h3>
+                <p class="advantage-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantage-item corner-block">
+                <h3 class="advantage-item-header">Мало туристов</h3>
+                <p class="advantage-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+              <li>
+                <img src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека" width="800" height="385">
+              </li>
+              <li class="advantage-item near-picture">
+                <h3 class="advantage-item-header near-picture">Там есть мост дьявола</h3>
+                <p class="advantage-item-description near-picture">Да, по нему можно пройти! Если вы осмелитесь,
+                  разумеется</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- Promo -->
+
+        <section class="sedona-promo">
+          <h2 class="promo-header">Приезжайте в седону отдохнуть в комфорте и уюте!</h2>
+          <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
+          <ul class="promo-list">
+            <li class="promo-item side-block">
+              <div class="house-img"></div>
+              <h3 class="promo-item-header">Жильё</h3>
+              <p class="promo-item-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="promo-item active">
+              <div class="food-img"></div>
+              <h3 class="promo-item-header">Еда</h3>
+              <p class="promo-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="promo-item side-block">
+              <div class="souvenirs-img"></div>
+              <h3 class="promo-item-header ">Сувениры</h3>
+              <p class="promo-item-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+
+        <!-- Hotel-search -->
+
+        <section class="hotel-search">
+          <h2 class="hotel-search-header"> Заинтересовались</h2>
+          <p class="hotel-search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие
+            предложения
+            гостиниц в Седоне</p>
+          <button class="button search-btn">Поиск гостиницы в Седоне</button>
+        </section>
+
+        <!-- Subscribe -->
+
+        <div class="subscribe subsc-index">
+          <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
+          <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form action="https://echo.htmlacademy.ru/" method="post">
+            <input type="text" name="email" placeholder="Ваш e-mail">
+            <button class="button subsc-button" type="submit">Подписаться</button>
+          </form>
         </div>
-      </section>
+      </main>
 
-      <!-- Promo -->
+      <!-- Footer -->
 
-      <section class="sedona-promo">
-        <h2 class="promo-header">Приезжайте в седону отдохнуть в комфорте и уюте!</h2>
-        <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
-        <ul class="promo-list">
-          <li class="promo-item side-block">
-            <div class="house"></div>
-            <h3 class="promo-item-header">Жильё</h3>
-            <p class="promo-item-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="promo-item active">
-            <div class="food"></div>
-            <h3 class="promo-item-header">Еда</h3>
-            <p class="promo-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="promo-item side-block">
-            <div class="souvenirs"></div>
-            <h3 class="promo-item-header ">Сувениры</h3>
-            <p class="promo-item-description">Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-
-      <!-- Hotel-search -->
-
-      <section class="hotel-search">
-        <h2 class="hotel-search-header"> Заинтересовались</h2>
-        <p class="hotel-search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
-          гостиниц в Седоне</p>
-        <button class="button search-btn" href="catalog.html">Поиск гостиницы в Седоне</button>
-      </section>
-
-      <!-- Subscribe -->
-
-      <div class="subscribe subsc-index">
-        <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
-        <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-          <input type="text" name="email" placeholder="Ваш e-mail">
-          <button class="button subsc-button" type="submit">Подписаться</button>
-        </form>
-      </div>
-    </main>
-
-    <!-- Footer -->
-
-    <footer class="main-footer">
-      <div class="footer-container">
-      <ul class="social">
-        <li class="social-item">
-          <a href="https://vk.com/htmlacademy">
-            <img src="images/socials/vk.svg" alt="логотип Вконтакте" width="24" height="14">
-            <span class="visually-hidden">Vkontakte</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://t.me/htmlacademy">
-            <img src="images/socials/telegram.svg" alt="Логотип Телеграм" width="18" height="15">
-            <span class="visually-hidden">Telegram</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://www.youtube.com/user/htmlacademy">
-            <img src="images/socials/youtube.svg" alt="Логотип Ютуб" width="22" height="17">
-            <span class="visually-hidden">Youtube</span>
-          </a>
-        </li>
-      </ul>
-      <div class="contact-phone">
-        <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
-      </div>
-      <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademy.svg"
-            alt="Логотип создателей сайта" width="115" height="33"></a>
-      </div>
-    </footer>
-   </div>
+      <footer class="main-footer">
+        <div class="footer-container">
+          <ul class="social">
+            <li class="social-item">
+              <a href="https://vk.com/htmlacademy">
+                <img src="images/socials/vk.svg" alt="логотип Вконтакте" width="24" height="14">
+                <span class="visually-hidden">Vkontakte</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://t.me/htmlacademy">
+                <img src="images/socials/telegram.svg" alt="Логотип Телеграм" width="18" height="15">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://www.youtube.com/user/htmlacademy">
+                <img src="images/socials/youtube.svg" alt="Логотип Ютуб" width="22" height="17">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          </ul>
+          <div class="contact-phone">
+            <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
+          </div>
+          <div class="devlogo-container">
+            <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademy.svg"
+                alt="Логотип создателей сайта" width="115" height="33"></a>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 
 </html>
