Добавление/удаление контейнеров

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         <!-- Advantages -->
 
         <section class="sedona-advantages">
-          <div class="advantages-container">
             <h2 class="advantages-header"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
             <ul class="advantages-list">
               <li class="advantage-item near-picture">
@@ -97,14 +96,15 @@
                   разумеется</p>
               </li>
             </ul>
-          </div>
         </section>
 
         <!-- Promo -->
 
         <section class="sedona-promo">
+        <div class="promo-header-container">
           <h2 class="promo-header">Приезжайте в седону отдохнуть в комфорте и уюте!</h2>
           <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
+        </div>
           <ul class="promo-list">
             <li class="promo-item side-block">
               <div class="house-img"></div>
