--- a/catalog.html
+++ b/catalog.html
@@ -219,7 +219,7 @@
 
       <!-- Subscribe -->
 
-      <div class="subscribe subsc-catalog">
+      <div class="subscribe">
         <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
         <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post">
