--- a/catalog.html
+++ b/catalog.html
@@ -19,25 +19,25 @@
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
-            <li class="navigation-item navigation-item-current">
-              <a class="navigation-link" href="#">Гостиницы</a>
+            <li class="navigation-item">
+              <a class="navigation-link catalog-current" href="#">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list nav-buttons">
             <li class="navigation-item-button">
               <button type="button">
-                <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
+                <!-- <img src="images/search.svg" alt="Иконка поиска" width="18" height="18"> -->
                 <span class="visually-hidden">Поиск</span>
               </button>
             </li>
             <li class="navigation-item-button">
               <button type="button">
-                <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17">
+                <!-- <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17"> -->
                 <span class="visually-hidden">Добавить в избранное</span>
               </button>
             </li>
@@ -58,9 +58,7 @@
           <ol class="breadcrumbs">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">
-                <div class="home-icon"></div>
-                <div class="icon-next"></div>
-                <span class="visually-hidden">Возврат на главную</span>
+              <span class="visually-hidden">Возврат на главную</span>
               </a>
             </li>
             <li class="breadcrumbs-item">
@@ -73,18 +71,18 @@
           <form class="filter-container" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="filter infrastructure">
               <legend class="filter-header">Инфраструктура:</legend>
-              <label class="filter-item"><input type="checkbox" name="hotel-feature" checked
+              <label class="filter-item filter-list-item"><input type="checkbox" name="hotel-feature" checked
                   value="pool">Бассейн</label>
-              <label class="filter-item"><input type="checkbox" name="hotel-feature" checked
+              <label class="filter-item filter-list-item"><input type="checkbox" name="hotel-feature" checked
                   value="parking">Парковка</label>
-              <label class="filter-item"><input type="checkbox" name="hotel-feature" value="Wi-Fi">Wi-Fi</label>
+              <label class="filter-item filter-list-item"><input type="checkbox" name="hotel-feature" value="Wi-Fi">Wi-Fi</label>
             </fieldset>
             <fieldset class="filter accomodation-type">
               <legend class="filter-header">Тип жилья:</legend>
-              <label class="filter-item"><input type="radio" name="accomodation-type" checked
+              <label class="filter-item filter-list-item"><input type="radio" name="accomodation-type" checked
                   value="hotel">Гостиница</label>
-              <label class="filter-item"><input type="radio" name="accomodation-type" value="motel">Мотель</label>
-              <label class="filter-item"><input type="radio" name="accomodation-type"
+              <label class="filter-item filter-list-item"><input type="radio" name="accomodation-type" value="motel">Мотель</label>
+              <label class="filter-item filter-list-item"><input type="radio" name="accomodation-type"
                   value="appartments">Апартаменты</label>
             </fieldset>
             <fieldset class="filter filter-price">
@@ -144,8 +142,10 @@
                 <span class="hotel-price-name">Гостиница</span>
                 <span class="hotel-price-value">от 4000 ₽</span>
               </p>
+              <div class="button-container">
               <button class="button detail-button" type="button">Подробнее</button>
               <button class="button favorite-button" type="button">В избранное</button>
+              </div>
               <p class="rating">
                 <span class="rating-img visually-hidden">Звездность отеля</span>
                 <span class="rating-value">рейтинг 8,5</span>
@@ -161,8 +161,10 @@
                 <span class="hotel-price-name">Гостиница</span>
                 <span class="hotel-price-value">От 5000 ₽</span>
               </p>
-              <button class="button detail-button" type="button">Подробнее</button>
-              <button class="button favorite-button added" type="button">В избранное</button>
+              <div class="button-container">
+                <button class="button detail-button" type="button">Подробнее</button>
+                <button class="button favorite-button added" type="button">В избранное</button>
+              </div>
               <p class="rating">
                 <span class="rating-img visually-hidden">Звездность отеля</span>
                 <span class="rating-value">рейтинг 9,2</span>
@@ -178,8 +180,10 @@
                 <span class="hotel-price-name">Гостиница</span>
                 <span class="hotel-price-value">От 2500 ₽</span>
               </p>
+              <div class="button-container">
               <button class="button detail-button" type="button">Подробнее</button>
               <button class="button favorite-button" type="button">В избранное</button>
+              </div>
               <p class="rating">
                 <span class="rating-img visually-hidden">Звездность отеля</span>
                 <span class="rating-value">рейтинг 6,9</span>
@@ -195,8 +199,10 @@
                 <span class="hotel-price-name">Гостиница</span>
                 <span class="hotel-price-value">От 1500 ₽</span>
               </p>
+              <div class="button-container">
               <button class="button detail-button" type="button">Подробнее</button>
               <button class="button favorite-button" type="button">В избранное</button>
+              </div>
               <p class="rating">
                 <span class="rating-img visually-hidden">Звездность отеля</span>
                 <span class="rating-value">рейтинг 5,0</span>
@@ -244,7 +250,6 @@
       <!-- Footer -->
 
       <footer class="main-footer">
-        <div class="footer-container">
           <ul class="social">
             <li class="social-item">
               <a href="https://vk.com/htmlacademy">
@@ -273,7 +278,6 @@
                 alt="Логотип создателей сайта" width="115" height="33">
             </a>
           </div>
-        </div>
       </footer>
     </div>
   </body>
