--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
             <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140" height="70">
           </a>
           <ul class="navigation-list">
-            <li class="navigation-item navigation-item-current">
-              <a class="navigation-link" href="#">Главная</a>
+            <li class="navigation-item">
+              <a class="navigation-link current" href="#">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Гостиницы</a>
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list nav-buttons">
             <li class="navigation-item-button">
               <button type="button">
-                <img src="images/search.svg" alt="Иконка поиска" width="18" height="18">
+                <!-- <img src="images/search.svg" alt="Иконка поиска" width="18" height="18"> -->
                 <span class="visually-hidden">Поиск</span>
               </button>
             </li>
             <li class="navigation-item-button">
               <button type="button">
-                <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17">
+                <!-- <img src="images/favorites.svg" alt="Добавить в избранное" width="18" height="17"> -->
                 <span class="visually-hidden">Добавить в избранное</span>
               </button>
             </li>
@@ -54,18 +54,19 @@
         <!-- Hero -->
 
         <section class="hero">
-          <div class="hero-container">
+            <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
             <img class="background-img" src="images/welcometext.svg"
               alt="Надоел Гранд каньон - Добро пожаловать в Седону" width="458" height="352">
-          </div>
-          <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
-          <p class="hero-text"> Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         </section>
 
         <!-- Advantages -->
 
         <section class="sedona-advantages">
-          <h2 class="advantages-header"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
+          <div class="advantages-header-container">
+            <p class="advantages-header-title"> Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span>
+            </p>
+            <p class="advantages-header-subtitle"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
           <ul class="advantages-list">
             <li class="advantage-item-near-picture">
               <div class="advantage-item">
@@ -98,7 +99,7 @@
                   осмелитесь,
                   разумеется</p>
               </div>
-              <div class="img-container">
+              <div class="img-container reverse">
                 <img class="advantage-image" src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека"
                   width="800" height="385">
               </div>
@@ -110,7 +111,9 @@
 
         <section class="sedona-promo">
           <div class="promo-header-container">
-            <h2 class="promo-header">Приезжайте в седону отдохнуть в комфорте и уюте!</h2>
+            <h2 class="promo-header">Приезжайте в седону отдохнуть
+            <span>в комфорте и уюте!</span>
+            </h2>
             <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="promo-list">
@@ -136,9 +139,10 @@
 
         <section class="hotel-search">
           <h2 class="hotel-search-header"> Заинтересовались</h2>
-          <p class="hotel-search-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие
-            предложения
-            гостиниц в Седоне</p>
+          <p class="hotel-search-description">Укажите предполагаемые даты поездки,
+            <span> и мы покажем вам лучшие
+            предложения гостиниц в Седоне</span>
+          </p>
           <button class="button search-btn">Поиск гостиницы в Седоне</button>
         </section>
 
@@ -157,7 +161,6 @@
       <!-- Footer -->
 
       <footer class="main-footer">
-        <div class="footer-container">
           <ul class="social">
             <li class="social-item">
               <a href="https://vk.com/htmlacademy">
@@ -185,7 +188,6 @@
             <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademy.svg"
                 alt="Логотип создателей сайта" width="115" height="33"></a>
           </div>
-        </div>
       </footer>
     </div>
   </body>
