Исправлен горизонтальный скролл + изменение разметки

--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
         <section class="hotel-selection">
           <h1 class="hotel-selection-header">Гостиницы Седоны</h1>
           <ol class="breadcrumbs">
-            <li class="breadcrumbs-item">
+            <li class="breadcrumbs-item breadcrumbs-item-after">
               <a class="breadcrumbs-link breadcrumbs-link-home" href="index.html">
                 <span class="visually-hidden">Возврат на главную</span>
               </a>
@@ -121,7 +121,7 @@
         </section>
 
         <section class="results">
-          <div class="controls">
+          <header class="controls">
             <h2 class="search-result">найдено гостиниц:38</h2>
             <select class="select-control" aria-label="Сортировка">
               <option value="popular">Сначала популярное</option>
@@ -144,7 +144,7 @@
                 </button>
               </li>
             </ul>
-          </div>
+          </header>
 
           <!-- Catalog -->
 
