--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>City of Sedona</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="images/decor/favicon.ico" rel="icon">
+    <link href="images/decor/favicon.png" type="image/png" rel="icon">
   </head>
 
   <body>
