--- a/index.html
+++ b/index.html
@@ -216,6 +216,49 @@
           </a>
         </div>
       </footer>
+      <section class="modal-container">
+        <div class="modal-window">
+          <h2 class="modal-header">Поиск гостиницы в Седоне</h2>
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="get">
+            <button type="button" class="modal-close-button"></button>
+            <label class="check-in-row">
+              <span class="row-title">Дата заезда:</span>
+              <input type="text" class="check-in-date" id="check-in-date" value="27 апреля 2020" name="check-in-date"
+                placeholder="Укажите дату">
+              <span class="check-in-date-error">Мы не можем отправить вас в прошлое.</span>
+            </label>
+            <label class="check-out-row">
+              <span class="row-title">Дата выезда:</span>
+              <input type="text" class="check-out-date" id="check-out-date" value="1 сентября 2023"
+                name="check-out-date" placeholder="Укажите дату">
+              <span class="check-out-date-error">На эти даты есть свободные номера. Пока есть.</span>
+            </label>
+            <div class="flex-container">
+              <label class="people-count">
+                <span class="adult-count-header count-header">Взрослые:</span>
+                <div class="count-block">
+                  <button type="button" class="count-minus"></button>
+                  <input type="number" class="people-number" id="adult-number" value="2" name="adult-number" min="0" max="10">
+                  <button type="button" class="count-plus"></button>
+                </div>
+              </label>
+              <label class="people-count">
+                <span class="children-count-header count-header">Дети:</span>
+                <span class="tooltip">
+                  <button type="button" class="tooltip-toggle"></button>
+                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </span>
+                <div class="count-block">
+                  <button type="button" class="count-minus"></button>
+                  <input type="number" class="people-number" id="child-number" value="2" name="child-number" min="0" max="10">
+                  <button type="button" class="count-plus"></button>
+                </div>
+              </label>
+            </div>
+            <button type="button" class="modal-search-button">Найти</button>
+        </div>
+        </form>
+      </section>
     </div>
   </body>
 
