--- a/modal.html
+++ b/modal.html
@@ -216,6 +216,57 @@
           </a>
         </div>
       </footer>
+      <section class="modal-container">
+        <div class="modal-window">
+          <h2 class="modal-header">Поиск гостиницы в Седоне</h2>
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="get">
+            <button type="button" class="modal-close-button"></button>
+            <label class="check-in-row">
+              <span class="checkin-title">Дата заезда:</span>
+              <input type="text" class="check-in-date" id="check-in-date" value="27 апреля 2020" name="check-in-date"
+                placeholder="Укажите дату">
+              <span class="check-in-error">Мы не можем отправить вас в прошлое.</span>
+            </label>
+            <label class="check-out-row">
+              <span class="checkout-title">Дата выезда:</span>
+              <input type="text" class="check-out-date" id="check-out-date" value="1 сентября 2023"
+                name="check-out-date" placeholder="Укажите дату">
+              <span class="check-out-text">На эти даты есть свободные номера. Пока есть.</span>
+            </label>
+            <div class="count-container">
+              <label class="adult people-count">
+                <span class="adult-count-header count-header">Взрослые:</span>
+                <div class="count-block">
+                  <button type="button" class="count-minus">
+                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#756157" viewBox="0 0 20 20"><path d="M3 9v2h14V9H3Z"/></svg>
+                  </button>
+                  <input type="number" class="people-number" id="adult-number" value="2" name="adult-number" min="1" max="10">
+                  <button type="button" class="count-plus">
+                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="#756157" viewBox="0 0 14 14"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/></svg>
+                  </button>
+                </div>
+              </label>
+              <label class="child people-count">
+                <span class="children-count-header count-header">Дети:</span>
+                <span class="tooltip">
+                  <button type="button" class="tooltip-toggle"></button>
+                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </span>
+                <div class="count-block">
+                  <button type="button" class="count-minus">
+                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#756157"  viewBox="0 0 20 20"><path d="M3 9v2h14V9H3Z"/></svg>
+                  </button>
+                  <input type="number" class="people-number" id="child-number" value="2" name="child-number" min="1" max="10">
+                  <button type="button" class="count-plus">
+                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="#756157" viewBox="0 0 14 14"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/></svg>
+                  </button>
+                </div>
+              </label>
+            </div>
+            <button type="button" class="modal-search-button">Найти</button>
+        </div>
+        </form>
+      </section>
     </div>
   </body>
 
